# nc-rp2040-sdk

./: CMakeLists.txt  LICENSE  README.md
docs/: CONTRIBUTING.md
docs/firmware/: firmware.md
firmware/: regs.s  rp2040.s
